Fixed spacing issues

--- a/packages/commonwealth/client/styles/pages/user_dashboard/dashboard_communities_preview.scss
+++ b/packages/commonwealth/client/styles/pages/user_dashboard/dashboard_communities_preview.scss
@@ -38,6 +38,8 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
+  position: fixed;
+  right: 50px;
   float: right;
   top: 70px;
   z-index: 1;
