--- a/packages/commonwealth/client/styles/pages/user_dashboard/index.scss
+++ b/packages/commonwealth/client/styles/pages/user_dashboard/index.scss
@@ -7,6 +7,9 @@
   justify-content: space-between;
   width: auto;
   z-index: 0;
+  @media (min-width: 1200px) {
+    margin-right: 25%;
+  }
 
   @include contentPadding;
 
